tests/check/illegal_array_access0.co
// RUN: not choreo -es %s 2>&1 | FileCheck %s

__co__ auto check_spanned_arr(f32 [2,4] a) {
  parallel by 1 {
    local f32[2, 8] b[2][3];

    foreach p in 2 {
      dma.copy a => b[1][-1].chunkat(_, p);
      dma.copy b[5][1].chunkat(_, p) => a;
      dma.copy a => b[1].chunkat(_, p);
      dma.copy a => b[1][1][0].chunkat(_, p);
      dma.copy a => b[1][0].chunkat(_, p);      // ok
    }
  }
}

// CHECK: error: Index -1 is out of bounds of the 2nd dimension of array 'b', where the valid range is [0, 3)
// CHECK:         dma.copy a => b[1][-1].chunkat(_, p);
// CHECK:                            ^
// CHECK: error: Index 5 is out of bounds of the 1st dimension of array 'b', where the valid range is [0, 2)
// CHECK:         dma.copy b[5][1].chunkat(_, p) => a;
// CHECK:                    ^
// CHECK: error: Invalid array access: expected 2 dimensions, but 1 were used.
// CHECK:         dma.copy a => b[1].chunkat(_, p);
// CHECK:                       ^
// CHECK: error: Invalid array access: expected 2 dimensions, but 3 were used.
// CHECK:         dma.copy a => b[1][1][0].chunkat(_, p);
// CHECK:                       ^

__co__ void check_event_arr() {
   parallel by 1 {
     shared event e[3];

     trigger e[10];
     trigger e[-1];
     trigger e[1][1];
     trigger e[0];          // ok
     trigger e[2];          // ok
     wait e[4];
     wait e[-1];
     wait e[2][0];
     wait e[0];             // ok
   }
}

// CHECK: error: Index 10 is out of bounds of the 1st dimension of array 'e', where the valid range is [0, 3)
// CHECK:         trigger e[10];
// CHECK:                   ^
// CHECK: error: Index -1 is out of bounds of the 1st dimension of array 'e', where the valid range is [0, 3)
// CHECK:         trigger e[-1];
// CHECK:                   ^
// CHECK: error: Invalid array access: expected 1 dimensions, but 2 were used.
// CHECK:         trigger e[1][1];
// CHECK:                 ^
// CHECK: error: Index 4 is out of bounds of the 1st dimension of array 'e', where the valid range is [0, 3)
// CHECK:         wait e[4];
// CHECK:                ^
// CHECK: error: Index -1 is out of bounds of the 1st dimension of array 'e', where the valid range is [0, 3)
// CHECK:         wait e[-1];
// CHECK:                ^
// CHECK: error: Invalid array access: expected 1 dimensions, but 2 were used.
// CHECK:         wait e[2][0];
// CHECK:              ^

__co__ void check_array_access_with_bounded_var(f32 [2,4] a) {
  parallel p by 3 {
    local f32[2, 8] b[2][3];

    foreach q in 2 {
      dma.copy a => b[p][q].chunkat(_, q);  // both ok. Currently, no check for bounded vars as index.
      dma.copy b[q][p].chunkat(_, q) => a;
    }
  }
}
// CHECK-NOT: error:

// CHECK: Totally 10 errors have been detected.
